# cli

./: .gitattributes  .gitignore  .gitleaks.toml  .importlinter  .mcp.json  .pre-commit-config.yaml  .semgrep.yml  .swiftlint.yml  AGENTS.md  CLAUDE.md  DEMO.md  README.md  REFERENCE.md  install.sh  pyproject.toml  pyrightconfig.tests.json
.claude/: settings.json
.claude/agents/: security-reviewer.md  template-contract-reviewer.md
.claude/commands/: review-changes.md
.claude/hooks/: require-gate-before-commit.sh  session-start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-swift.yml  codeql.yml  pr-overlap.yml  release.yml  slack-notify.yml
Formula/: aai.rb  assembly.rb
aai_cli/: AGENTS.md  __init__.py  __main__.py  agent_exec.py  argscan.py  caption_exec.py  choices.py  client.py  clip_exec.py  clip_select.py  coding_agent.py  command_registry.py  config.py  config_builder.py  config_store.py  context.py  debuglog.py  deploy_exec.py  der.py  dev_exec.py  dictate_exec.py  doctor_checks.py  dub_exec.py  environments.py  errors.py  eval_data.py  eval_hf_api.py  evaluate_exec.py  follow.py  help_panels.py  help_text.py  hotkey.py  init_exec.py  jsonshape.py  llm.py  llm_exec.py  main.py  mediafile.py  microphone.py  options.py  (+24 more)
aai_cli/agent/: audio.py  events.py  render.py  session.py  voices.py
aai_cli/agent_cascade/: __init__.py  _io.py  _runtime.py  banner.py  brain.py  config.py  datetime_tool.py  engine.py  mcp_tools.py  messages.py  modals.py  plan.py  project_context.py  prompt.py  risk.py  sandbox.py  spoken_approval.py  streamer.py  subagents.py  summarize.py  text.py  tui.py  tui_status.py  voices.py  weather_tool.py  webpage_tool.py  write_gate.py
aai_cli/agent_framework/: __init__.py  config.py  engine.py  text.py  voices.py
aai_cli/app/: agent_shared.py  batch.py  coding_agent.py  context.py  doctor_checks.py  init_exec.py  mediafile.py  setup_exec.py  transcribe_batch.py  transcribe_exec.py  transcribe_sources.py  transcribe_validate.py  transform.py
aai_cli/auth/: __init__.py  ams.py  discovery.py  endpoints.py  flow.py  loopback.py
aai_cli/code_agent/: __init__.py  _config_root.py  agent.py  ask_tool.py  banner.py  cli_tool.py  docs_mcp.py  events.py  fetch_tool.py  firecrawl_search.py  memory.py  messages.py  modals.py  model.py  prompt.py  render.py  risk.py  session.py  skills.py  store.py  summarize.py  tui.py  tui_status.py  voice.py  voice_ui.py  web_search.py
aai_cli/code_gen/: __init__.py  agent.py  agent_cascade.py  agent_cascade_body.py  serialize.py  snippets.py  stream.py  transcribe.py
aai_cli/commands/: account.py  agent.py  audit.py  caption.py  claude.py  clip.py  config.py  config_cmd.py  deploy.py  dev.py  dictate.py  doctor.py  dub.py  evaluate.py  init.py  keys.py  llm.py  login.py  onboard.py  samples.py  sessions.py  setup.py  share.py  speak.py  stream.py  telemetry.py  transcribe.py  transcripts.py  update.py  webhooks.py
aai_cli/control/: __init__.py  actions.py  bridge.py  engine.py  helper.py  listen.py  macos_ui_control.swift  prompt.py  render.py  tools.py
aai_cli/core/: access.py  choices.py  client.py  config.py  config_builder.py  config_lock.py  config_store.py  debuglog.py  der.py  env.py  environments.py  errors.py  hotkey.py  jsonshape.py  keyring_store.py  llm.py  locking.py  microphone.py  procs.py  project.py  remotefs.py  signals.py  ssrf.py  stdio.py  sync_stt.py  telemetry.py  webpage.py  wer.py  ws.py  youtube.py
aai_cli/init/: __init__.py  devserver.py  keys.py  procfile.py  runner.py  scaffold.py  steps.py  templates.py  tunnel.py
aai_cli/onboard/: progress.py  prompter.py  sections.py  wizard.py
aai_cli/streaming/: batch.py  diagnostics.py  events.py  macos.py  macos_system_audio.swift  naming.py  record.py  render.py  savedir.py  session.py  sources.py  transcript.py  turn_presets.py  validate.py
aai_cli/tts/: audio.py  dialogue.py  session.py  text.py  voices.py
aai_cli/ui/: follow.py  output.py  render.py  steps.py  theme.py  typer_patches.py  update_check.py
assemblyai_cli/: __main__.py  client.py  config.py  config_builder.py  context.py  errors.py  follow.py  llm.py  main.py  microphone.py  output.py  render.py  stdio.py  theme.py  transcribe_render.py  youtube.py
assemblyai_cli/agent/: audio.py  render.py  session.py  voices.py
assemblyai_cli/auth/: __init__.py  ams.py  discovery.py  endpoints.py  flow.py  loopback.py
assemblyai_cli/code_gen/: __init__.py  agent.py  serialize.py  snippets.py  stream.py  transcribe.py
scripts/: bump_minor.sh  bump_patch.sh  check.py  check.sh  check_stages_gate.py  ci_install_audio_deps.sh  codeql_gate.py  cut_release.sh  docker_build_check.sh  docs_consistency_gate.py  docstring_coverage_gate.py  gate_marker.py  gate_tool_pins.sh  generate_brew_resources.py  generated_code_compile_gate.py  json_lint.py  max_file_length.py  mutation_gate.py  mutation_sweep.py  record_fixtures.py  startup_import_gate.py  template_contract_gate.py  unused_fixtures_gate.py
specs/: 2026-06-04-aai-init-design.md
tests/: AGENTS.md  _agent_cascade.py  _agent_framework.py  _cascade_fakes.py  _cli_tree.py  _clip_helpers.py  _control_helpers.py  _dub_helpers.py  _snapshot_surface.py  _stream_helpers.py  _tts_session_helpers.py  _tui_snapshot.py  conftest.py  replay_fixtures.py  setup_helpers.py  test_account_command.py  test_agent_audio.py  test_agent_cascade_approval.py  test_agent_cascade_brain.py  test_agent_cascade_brain_approval.py  test_agent_cascade_command.py  test_agent_cascade_config.py  test_agent_cascade_datetime.py  test_agent_cascade_engine.py  test_agent_cascade_files.py  test_agent_cascade_filler.py  test_agent_cascade_mcp.py  test_agent_cascade_project_context.py  test_agent_cascade_prompt.py  test_agent_cascade_reply.py  test_agent_cascade_sandbox.py  test_agent_cascade_show_code.py  test_agent_cascade_spoken_approval.py  test_agent_cascade_streamer.py  test_agent_cascade_subagents.py  test_agent_cascade_text.py  test_agent_cascade_voices.py  test_agent_cascade_weather.py  test_agent_cascade_webpage.py  test_agent_command.py  (+234 more)
(+281 files in other folders)
