[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aai-cli"
version = "0.1.0"
description = "Command-line interface for AssemblyAI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AssemblyAI", email = "support@assemblyai.com" }]
requires-python = ">=3.11"
keywords = ["assemblyai", "transcription", "speech-to-text", "cli", "audio", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.26.7",  # >=0.13 vendors its own click (typer._click); we no longer import click
    "assemblyai>=0.64.4",
    "rich>=15.0.0",
    "keyring>=25.7.0",
    # httpx2 is Pydantic's maintained fork of httpx (github.com/pydantic/httpx2,
    # forked from httpx 0.28.1, API-identical bar the package rename). The exact
    # version is pinned in uv.lock; safe-chain's minimum-package-age check governs
    # which releases the lock may adopt, so no manual version cap is needed here.
    # (Plain httpx still arrives transitively via the assemblyai SDK.)
    "httpx2>=2.0.0",
    "platformdirs>=4.10.0",
    "tomli-w>=1.2.0",
    "websockets>=16.0",
    "sounddevice>=0.5.5",
    "openai>=2.41.0",
    "yt-dlp>=2026.3.17",
    "questionary>=2.0.1",
    # audioop (used for PCM resampling) left the stdlib in 3.13; this backport provides it.
    "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.urls]
Homepage = "https://github.com/AssemblyAI/cli"
Repository = "https://github.com/AssemblyAI/cli"
Issues = "https://github.com/AssemblyAI/cli/issues"

[project.scripts]
aai = "aai_cli.main:run"

# PEP 735 dependency group (not a [project] extra). uv installs this group by
# default for `uv run`/`uv sync` (see [tool.uv] default-groups below), so the
# type-checkers and pytest resolve their imports with no `--extra`/`--group` flag
# — and a plain `.venv` is correct for editors (see [tool.pyright] venv). pip
# installs it with `pip install --group dev` (requires pip >= 25.1).
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.155.1",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "pyright>=1.1.409",
    "pre-commit>=4.6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "syrupy>=4.0",
    "xenon>=0.9.3",
    "diff-cover>=9.0.0",
]

[tool.uv]
# Install the dev group for every `uv run`/`uv sync` (this is uv's default, pinned
# here so it's explicit and stable).
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["aai_cli"]
# Force-include the committed template files (incl. renamed dotfiles); the `**` glob
# would otherwise also sweep in __pycache__/*.pyc left by importing a template during
# tests, so exclude those from the wheel.
artifacts = ["aai_cli/init/templates/**"]
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Treat warnings as errors so a deprecation or resource leak introduced in a change
# fails the build instead of scrolling past. Listed-later filters take precedence, so
# the targeted ignores below override the blanket `error`.
filterwarnings = [
    "error",
]
markers = [
    "e2e: real-API end-to-end tests that drive the CLI (need ASSEMBLYAI_API_KEY; skip otherwise)",
    "install_script: real install via install.sh from a locally-built wheel; asserts `aai` runs (slow; needs network + uv/pipx; skip otherwise)",
    "install: install each init template's requirements.txt into a clean venv and import it (slow; needs network + uv; skip otherwise)",
]

[tool.mypy]
python_version = "3.11"
files = ["aai_cli", "tests"]
# Third-party deps (assemblyai, sounddevice) ship no type stubs.
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Tests are type-checked too, but pytest functions don't need return annotations.
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
# Second type checker alongside mypy: pyright catches a different (and often
# stricter) class of issues. Same source scope as mypy (files above).
include = ["aai_cli", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Third-party deps (assemblyai, sounddevice) ship no type stubs.
reportMissingTypeStubs = false
# Resolve imports against the uv-managed environment so the CLI and editors
# (Pylance) report identically. `uv run`/`uv sync` create `.venv` with the dev
# group, so pytest/fastapi/etc. resolve here. Run `uv sync` once on a fresh clone.
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# PGH/ERA/TRY/TD/FIX close the "make the error go away" escape hatches a coding agent
# reaches for: blanket `# noqa`/`# type: ignore` (PGH), commented-out code (ERA),
# exception anti-patterns (TRY), and untracked TODO/FIXME markers (TD/FIX).
select = ["E", "F", "I", "UP", "B", "BLE", "C4", "SIM", "RET", "PTH", "ARG", "S", "RUF",
          "PGH", "ERA", "TRY", "TD", "FIX"]
# E501: line length is owned by the formatter.
# B008: Typer uses function calls (typer.Option/Argument) as parameter defaults.
# S603/S607: we intentionally shell out to `claude`/`npx` with controlled args.
# TRY003: the CLIError hierarchy is built around descriptive messages passed at the
#   raise site, so long messages there are deliberate, not an anti-pattern.
ignore = ["E501", "B008", "S603", "S607", "TRY003"]

[tool.ruff.lint.per-file-ignores]
# Tests assert freely, use throwaway args/temp paths, and don't need pathlib/security lints.
# TRY300: test helpers commonly `return` inside a try while asserting on the except path.
"tests/**" = ["S101", "S105", "S106", "S107", "S108", "ARG001", "ARG002", "ARG005", "PTH123", "SIM117", "TRY300"]
